--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,15 @@ body {
 .img-medium {
     height: 200px;
 }
+.container 
+{
+        color: grey;
+        font-family: arial;
+         width: 800px;
+         margin: 0 auto;
+         padding-top:60px;
+         padding-left:20px;
+         padding-right:20px;
+    
+}
 
